--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "create-tables": "node src/scripts/createTables.js",
+    "start": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +14,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
-    "socket.io": "^4.5.3"
+    "knex": "^2.3.0",
+    "mysql": "^2.18.1",
+    "socket.io": "^4.5.3",
+    "sqlite3": "^5.1.2"
   }
 }
