--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@faker-js/faker": "^7.6.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "knex": "^2.3.0",
+    "minimist": "^1.2.7",
     "mongoose": "^6.8.3",
     "mysql": "^2.18.1",
     "normalizr": "^3.6.2",
